Add more detail to and update README